# sf-metadata-lint

./: .gitignore  .sf-metadata-lint.json  Cargo.toml  README.md
.github/workflows/: main-push.yml  validate-branch.yml
src/: all_xml_files.rs  finding.rs  main.rs  main_sf_metadata_lint.rs  main_structs_generator.rs  permission_set.rs  sf_xml_file.rs  util.rs
src/checks/: all_xml_files.rs  application.rs  flow.rs  global_value_set.rs  layout.rs  mod.rs  object_field.rs  permission_set.rs  profile.rs  recordtype.rs  translation.rs
src/metadata/: AIApplication.rs  AIApplicationConfig.rs  AIApplicationStatus.rs  AIApplicationType.rs  AIFilterOperation.rs  AIFilterUnit.rs  AIPredictionType.rs  AIReplyRecommendationsSettings.rs  AIScoringMode.rs  AIValueType.rs  APIAccessLevel.rs  AccessMapping.rs  AccessMethod.rs  AccountInsightsSettings.rs  AccountIntelligenceSettings.rs  AccountRelationshipShareRule.rs  AccountSettings.rs  AccountSharingRuleSettings.rs  AccountingFieldMapping.rs  AccountingSettings.rs  ActionEmailRecipientTypes.rs  ActionEmailSenderType.rs  ActionForNoRecordFound.rs  ActionForSingleRecordFound.rs  ActionLauncherItemDef.rs  ActionLinkExecutionsAllowed.rs  ActionLinkGroupTemplate.rs  ActionLinkHttpMethod.rs  ActionLinkTemplate.rs  ActionLinkType.rs  ActionLinkUserVisibility.rs  ActionOverride.rs  ActionOverrideType.rs  ActionPlanTemplate.rs  ActionPlanTemplateItem.rs  ActionPlanTemplateItemDependency.rs  ActionPlanTemplateItemValue.rs  ActionSubtype.rs  ActionTaskAssignedToTypes.rs  ActionableListDatasetColumn.rs  (+1525 more)
src/utilities/: config.rs  finding.rs  (+4 more)
(+27 files in other folders)
